[metadata]
# replace with your username:
name = lemon-py
version = 0.99.0
author = Aubrey R. Jones
author_email = netzapper@gmail.com
description = Generic parse tree, configurable lexer, `lemon` parser generator, wrapped for C++17 and Python 3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aubreyrjones/lemon-py
project_urls =
    Bug Tracker = https://github.com/aubreyrjones/lemon-py/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Development Status :: 4 - Beta

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = 
    bin/lempy
    bin/lempy_build
install_requires = 
    pybind11
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
